Fix navbar overlap.

--- a/public/css/local.css
+++ b/public/css/local.css
@@ -4,7 +4,7 @@ html {
 }
 
 body {
-  margin-bottom: 50px;
+  padding-top: 70px;
 }
 
 #footer {
